--- a/templates/main.html
+++ b/templates/main.html
@@ -19,7 +19,10 @@
       {% include "header.html" %}
       <div class="row">
         <div class="col-xs-4">
-          Categories
+          <h3>Categories</h3>
+          {% for category in categories %}
+            <p>{{category}}</p>
+          {% endfor %}
         </div>
         <div class="col-xs-8">
           {% block content %}
