Create ('/catalog/[Category]/[Item])') to show specific item.

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
 {% block content %}
-<h3>Latest Items!</h3>
+<h3>{{name}} Items</h3>
 {% for item in items %}
   <p>{{item}}</p>
 {% endfor %}
