--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -4,7 +4,7 @@
   <div class="col-xs-4">
     <h3>Categories</h3>
     {% for category in categories %}
-      <p>{{category}}</p>
+      <p>{{category.name}}</p>
     {% endfor %}
   </div>
   <div class="col-xs-8">
