--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -10,7 +10,7 @@
   <div class="col-xs-8">
     <h3>{{name}} Items</h3>
     {% for item in items %}
-      <p>{{item.name}}</p>
+      <p>{{item.name}} (<i>{{item.category.name}}</i>)</p>
     {% endfor %}
   </div>
 </div>
