--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -10,7 +10,7 @@
   <div class="col-xs-8">
     <h3>{{name}} Items</h3>
     {% for item in items %}
-      <p>{{item.name}} (<i>{{item.category.name}}</i>)</p>
+      <p><a href="{{url_for('edit_item', category=item.category.name, item=item.name)}}">{{item.name}}</a> (<i>{{item.category.name}}</i>)</p>
     {% endfor %}
   </div>
 </div>
