Add Google button.

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
 {% block content %}
 
-Login placeholder
+<div class="g-signin2" data-onsuccess="onSignIn"></div>
 
 {% endblock %}
