--- a/templates/login.html
+++ b/templates/login.html
@@ -3,4 +3,17 @@
 
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
+<script>
+function onSignIn(googleUser) {
+  var id_token = googleUser.getAuthResponse().id_token;
+  var xhr = new XMLHttpRequest();
+  xhr.open('POST', 'http://localhost:4000/gconnect?state={{STATE}}');
+  xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+  xhr.onload = function() {
+    console.log('Signed in as: ' + xhr.responseText);
+  };
+  xhr.send('idtoken=' + id_token);
+}
+</script>
+
 {% endblock %}
