--- a/templates/login.html
+++ b/templates/login.html
@@ -6,11 +6,15 @@
 <script>
 function onSignIn(googleUser) {
   var id_token = googleUser.getAuthResponse().id_token;
+
   var xhr = new XMLHttpRequest();
   xhr.open('POST', 'http://localhost:4000/gconnect?state={{STATE}}');
   xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
   xhr.onload = function() {
     console.log('Signed in as: ' + xhr.responseText);
+    setTimeout(function() {
+      window.location.href = "/catalog";
+    }, 4000);
   };
   xhr.send('idtoken=' + id_token);
 }
