--- a/templates/header.html
+++ b/templates/header.html
@@ -14,7 +14,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{url_for('show_login')}}">Login</a></li>
+        <li>
+        {% if 'username' not in session %}
+          <a href="{{url_for('show_login')}}">Login</a>
+        {% else %}
+          <a href="">Logout</a>
+        {% endif %}
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
