--- a/templates/header.html
+++ b/templates/header.html
@@ -15,10 +15,10 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li>
-        {% if 'username' not in session %}
+        {% if 'user_id' not in session %}
           <a href="{{url_for('show_login')}}">Login</a>
         {% else %}
-          <a href="">Logout</a>
+          <a href="{{url_for('logout')}}">Logout</a>
         {% endif %}
         </li>
       </ul>
