--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@ function onSignIn(googleUser) {
   var id_token = googleUser.getAuthResponse().id_token;
 
   var xhr = new XMLHttpRequest();
-  xhr.open('POST', 'http://localhost:4000/gconnect?state={{STATE}}');
+  xhr.open('POST', 'http://localhost:4000/gconnect?state={{state}}');
   xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
   xhr.onload = function() {
     console.log('Signed in as: ' + xhr.responseText);
