Add a sign out link that disconnects from Google.

--- a/templates/header.html
+++ b/templates/header.html
@@ -19,6 +19,22 @@
           <a href="{{url_for('show_login')}}">Login</a>
         {% else %}
           <a href="{{url_for('logout')}}">Logout</a>
+          <script>
+            function signOut() {
+              var auth2 = gapi.auth2.getAuthInstance();
+              auth2.signOut().then(function() {
+                console.log('User signed out.');
+              });
+            }
+
+            function onLoad() {
+              gapi.load('auth2', function() {
+                gapi.auth2.init();
+              });
+            }
+          </script>
+          <a href="#" onclick="signOut();">Sign out</a>
+          <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
         {% endif %}
         </li>
       </ul>
