--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@ function sendTokenToServer() {
       console.log('Successful login for: ' + response.name);
       $.ajax({
         type: 'POST',
-        url: '/fbconnect?state={{STATE}}',
+        url: '/fbconnect?state={{state}}',
         processData: false,
         data: access_token,
         contentType: 'application/octet-stream; charset=utf-8',
@@ -38,7 +38,7 @@ function sendTokenToServer() {
           if (result) {
             console.log("FB Login successful! Redirecting...");
             setTimeout(function() {
-              window.location.href = "/restaurant";
+              window.location.href = "{{url_for('catalog')}}";
             }, 4000);
           } else {
             console.log("Failed to make a server-side call. Check your configuration and console.");
