--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,38 @@
-{% extends "main.html" %}
-{% block content %}
+<!DOCTYPE html>
+<html>
+<head>
+
+<!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="//apis.google.com/js/platform.js?onload=start"> </script>
+<!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
+
+<script>
+  function start() {
+    gapi.load('auth2', function() {
+      auth2 = gapi.auth2.init({
+        client_id: '900877087271-g7c2pnrembu2bmn3i8k4bem5otqlju1h.apps.googleusercontent.com',
+        // Scopes to request in addition to 'profile' and 'email'
+        //scope: 'additional_scope'
+      });
+    });
+  }
+</script>
+</head>
+
 
 <div id="status"></div>
 
-<div class="g-signin2" data-onsuccess="onSignIn"></div>
+<button id="signinButton">Sign in with Google</button>
+<script>
+  $('#signinButton').click(function() {
+    // signInCallback defined in step 6.
+    auth2.grantOfflineAccess().then(signInCallback);
+  });
+</script>
 
+<!-- <div class="g-signin2" data-onsuccess="onSignIn"></div>
+ -->
 <script>
 function onSignIn(googleUser) {
   var id_token = googleUser.getAuthResponse().id_token;
@@ -129,4 +157,3 @@ function testAPI() {
 </fb:login-button>
 
 
-{% endblock %}
