Implement gconnect() with one time code.

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id" content="900877087271-g7c2pnrembu2bmn3i8k4bem5otqlju1h.apps.googleusercontent.com">
+  <!--   <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="900877087271-g7c2pnrembu2bmn3i8k4bem5otqlju1h.apps.googleusercontent.com"> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
