--- a/templates/header.html
+++ b/templates/header.html
@@ -18,24 +18,7 @@
         {% if 'user_id' not in session %}
           <a href="{{url_for('show_login')}}">Login</a>
         {% else %}
-          <a href="#" onclick="signOut();">Sign out</a>
-          <script>
-            function signOut() {
-              var auth2 = gapi.auth2.getAuthInstance();
-              auth2.signOut().then(function() {
-                console.log('User signed out.');
-                window.location.href = "{{url_for('logout')}}";
-              });
-            }
-
-            function onLoad() {
-              gapi.load('auth2', function() {
-                gapi.auth2.init();
-              });
-            }
-          </script>
-
-          <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
+          <a href="{{url_for('logout')}}">Logout</a>
         {% endif %}
         </li>
       </ul>
