--- a/templates/login.html
+++ b/templates/login.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html itemscope itemtype="http://schema.org/Article">
 <head>
+  <!-- BEGIN Pre-requisites -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
+  </script>
+  <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer>
+  </script>
+  <!-- END Pre-requisites -->
 
-<!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script src="//apis.google.com/js/platform.js?onload=start"> </script>
-<!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
-
-<script>
-  function start() {
-    gapi.load('auth2', function() {
-      auth2 = gapi.auth2.init({
-        client_id: '900877087271-g7c2pnrembu2bmn3i8k4bem5otqlju1h.apps.googleusercontent.com',
-        // Scopes to request in addition to 'profile' and 'email'
-        //scope: 'additional_scope'
+  <script>
+    function start() {
+      gapi.load('auth2', function() {
+        auth2 = gapi.auth2.init({
+          client_id: '900877087271-g7c2pnrembu2bmn3i8k4bem5otqlju1h.apps.googleusercontent.com',
+          // Scopes to request in addition to 'profile' and 'email'
+          //scope: 'additional_scope'
+        });
       });
-    });
-  }
-</script>
+    }
+  </script>
 </head>
 
 
@@ -31,9 +32,37 @@
   });
 </script>
 
-<!-- <div class="g-signin2" data-onsuccess="onSignIn"></div>
- -->
 <script>
+function signInCallback(authResult) {
+  if (authResult['code']) {
+    // Hide the sign-in button now that the user is authorized, for example:
+    $('#signinButton').attr('style', 'display: none');
+
+    // Send the code to the server
+    $.ajax({
+      type: 'POST',
+      url: 'http://localhost:4000/gconnect?state={{state}}',
+      // Always include an `X-Requested-With` header in every AJAX request,
+      // to protect against CSRF attacks.
+      headers: {
+        'X-Requested-With': 'XMLHttpRequest'
+      },
+      contentType: 'application/octet-stream; charset=utf-8',
+      success: function(result) {
+        document.getElementById('status').innerHTML = 'Logged in. Redirecting...'
+        setTimeout(function() {
+          window.location.href = "{{url_for('catalog')}}";
+        }, 4000);
+      },
+      processData: false,
+      data: authResult['code']
+    });
+  } else {
+    // There was an error.
+  }
+}
+
+
 function onSignIn(googleUser) {
   var id_token = googleUser.getAuthResponse().id_token;
 
