--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -8,6 +8,9 @@
     {% endfor %}
   </div>
   <div class="col-xs-8">
+    {% if 'user_id' in session %}
+      <p><a href="">Add Item</a></p>
+    {% endif %}
     <h3>{{name}} Items</h3>
     {% for item in items %}
       <p><a href="{{url_for('edit_item', category=item.category.name, item=item.name)}}">{{item.name}}</a> (<i>{{item.category.name}}</i>)</p>
