--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -3,6 +3,20 @@
 <div class="row">
   <div class="col-xs-4">
   <h3>New Item</h3>
+  <form method="post">
+  <p>Name</p>
+  <input type="text" name="name" value={{name}}></input>
+  <p>Description</p>
+  <textarea name="description">{{description}}</textarea>
+  <p>Category</p>
+  <select name="category">
+    {% for category in categories %}
+      <option value="{{category.name}}">{{category.name}}
+      </option>
+    {% endfor %}
+  </select>
+
+  </form>
   </div>
 </div>
 {% endblock %}
