Add submit button to template.

--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -15,7 +15,11 @@
       </option>
     {% endfor %}
   </select>
-
+  <br>
+  <br>
+  <div>
+    <input type="submit"></input>
+  </div>
   </form>
   </div>
 </div>
