--- a/templates/view_item.html
+++ b/templates/view_item.html
@@ -4,6 +4,8 @@
 <h3>{{item.name}}</h3>
 <p>{{item.description}}</p>
 
+{% if can_edit %}
 <a href="">Edit</a> | <a href="">Delete</a>
+{% endif %}
 
 {% endblock %}
