--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -3,6 +3,7 @@
 <div class="row">
   <div class="col-xs-4">
   <h3>Edit Item</h3>
+  {% include 'item_form.html' %}
   </div>
 </div>
 {% endblock %}
