--- a/templates/delete_item.html
+++ b/templates/delete_item.html
@@ -3,7 +3,17 @@
 <div class="row">
   <div class="col-xs-4">
   <h3>Delete Item</h3>
-  <p>Are you sure you want to delete?</p>
+  <form method="post">
+    <p>Are you sure you want to delete?</p>
+    <button type="submit" class="btn btn-default delete" id="submit">
+      <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete
+    </button>
+    <a href="{{url_for('catalog')}}">
+      <button class="btn btn-default delete">
+      <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel
+      </button>
+    </a>
+  </form>
   </div>
 </div>
 {% endblock %}
