--- a/templates/delete_item.html
+++ b/templates/delete_item.html
@@ -6,12 +6,10 @@
   <form method="post">
     <p>Are you sure you want to delete?</p>
     <button type="submit" class="btn btn-default delete" id="submit">
-      <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete
+      <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete
     </button>
-    <a href="{{url_for('catalog')}}">
-      <button class="btn btn-default delete">
+    <a href="{{url_for('catalog')}}" class="btn btn-default delete">
       <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel
-      </button>
     </a>
   </form>
   </div>
